--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
    --weight-semi-bold : 600;
    --weight-regular :  400;
    /* size */
+   --size-border-radius : 4px
 
 }
 
@@ -32,6 +33,22 @@
 * {
     box-sizing : border-box;
     /* padding했을 때 padding포함하고 width, height 같ㅌ도록*/
+}
+
+body {
+    margin : 0;
+    font-family: 'Kanit', sans-serif;
+    cursor : default;
+}
+
+a {
+    text-decoration: none;
+    color : var(--color-white);
+}
+
+ul {
+    list-style : none;
+    padding-left:0;
 }
 
 /* Typography */
@@ -53,5 +70,43 @@ h3 {
     font-size: var(--font-regular);
     font-weight: var(--weight-regular);
     color:var(--color--black);
+    margin : 8px 0;
+}
+
+p {
+    font-size: var(--font-regular);
+    font-weight: var(--weight-regular);
+    color:var(--color--black);
     margin : 4px 0;
+}
+
+/* nav */
+#navbar {
+    display :flex;
+    justify-content: space-between;
+    background-color: var(--color-pink);
+    align-items : cneter;
+    color : var(--color-white);
+    padding : 16px;
+}
+
+.navbar__menu {
+    display : flex;
+
+}
+.navbar__logo {
+    font-size : var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+}
+.navbar__menu__item {
+    padding: 8px 12px;
+    margin : 0 4px;
+    cursor : pointer;
+    border-radius: var(--size-border-radius);
+}
+.navbar__menu__item.active {
+    border:1px solid var(--color-white);    
+}
+.navbar__menu__item:hover {
+    background-color: var(--color-dark-pink);
 }
