--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@
    --weight-regular :  400;
    /* size */
    --size-border-radius : 4px
+   /* animation duration */
+   --animation-duration : 300ms;
 
 }
 
@@ -148,4 +150,61 @@ p {
     border-radius: 4px;
     color :var(--color-white);
 }
+/* Section common */
+.section {
+    padding:50px;
+    text-align : center;
+    max-width:1200px;
+    margin:auto;
+}
 
+/* abount */
+.about__majors {
+    display : flex;
+    justify-content: space-between;
+    margin : 80px 0;
+}
+
+.major__icon {
+    width:170px;
+    height:170px;
+    line-height:170px;
+    font-size:70px;
+    margin:auto;
+    color:var(--color-blue);
+    border:1px solid var(--color-blue);
+    border-radius : 50%;
+    margin-bottom : 16px;
+}
+.major__title,.major__descrption {
+    color:var(--color-dark-grey);
+}
+.major_-description {
+    font-size : var(--font-small);
+}
+.major__icon:hover i {
+    color:var(--color-pink);
+    transform : rotate(-30deg) scale(1.2);
+}
+.major__icon i {
+    transition : all var(--animation-duration) ease;
+}
+
+.job {
+    display: flex;
+
+}
+.job__description {
+    text-align:left;
+    margin :0 16px;
+}
+.job_image {
+    width:200px;
+    height:70px;
+}
+.job__name {
+    font-size:var(--font-small);
+}
+.job__period {
+    font-size:var(--font-micro);
+}
