--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
    --weight-semi-bold : 600;
    --weight-regular :  400;
    /* size */
-   --size-border-radius : 4px
+   --size-border-radius : 4px;
    /* animation duration */
    --animation-duration : 300ms;
 
@@ -255,4 +255,38 @@ p {
 }
 .tools,.etc {
     padding:20px;
+}
+/* work */
+.work__categories {
+    margin: 40px;
+}
+.category__btn {
+    border:1px solid var(--color-dark-white);
+    border-radius : var(--size-border-radius);
+    font-size:var(--font-regular);
+    padding:8px 48px;
+}
+.category__btn.active,
+.category__btn.hover {
+    background-color: var(--color-pink);
+    color:var(--color-white);
+}
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+    opacity: 1;
+    top:0;
+}
+.category__count {
+    background-color: orange;
+    border-radius: 50%;
+    color:var(--color-white);
+    width:24px;
+    height:24px;
+    line-height:24px;
+    display:inline-block;
+    position:relative;
+    top : -20px;
+    left:4px;
+    opacity: 0;
+    transition:all var(--animation-duration) ease;
 }
