--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 h2 {
-    font-size: var(--font-regular);
+    font-size: var(--font-medium);
     font-weight: var(--weight-semi-bold);
     color : var(--color-black);
     margin : 8px 0;
@@ -289,4 +289,62 @@ p {
     left:4px;
     opacity: 0;
     transition:all var(--animation-duration) ease;
+}
+
+/* testimonials */
+#testimonials {
+    background-color: var(--color-light-white);
+}
+.testimonials {
+    margin:40px;
+}
+.testimonial {
+    display:flex;
+    margin:32px 0;
+}
+.testimonial__avatar {
+    width:150px;
+    height:150px;
+    border:1px solid blue;
+    border-radius: 50%;
+    margin:12px;
+}
+.testimonial__speech-bubble {
+    padding:18px;
+    background-color: var(--color-white);
+    border-radius:var(--size-border-radius);
+}
+.testimonial__avatar:nth-child(odd) {
+    margin-right:40px;
+}
+.testimonial__avatar:nth-child(even) {
+    margin-left:40px;
+}
+.testimonial__speech-bubble p {
+    color:var(--color-light-grey);
+}
+.testimonial__speech-bubble a {
+    color:var(--color-pink);
+}
+
+/* contact */
+#contact {
+    background-color: var(--color-pink);
+}
+.contact__title,
+.contact__email,
+.contact__rights {
+    color:var(--color-white);
+}
+.contact__title {
+    margin:32px 0;
+}
+.contact__links {
+    font-size:var(--font-large);
+    margin:24px 0;
+    transition: all var(--animation-duration) ease;
+}
+.contact__links i:hover {
+    transform:scale(1.1);
+    color:var(--color-yellow);
 }
