--- a/style.css
+++ b/style.css
@@ -96,12 +96,20 @@ p {
 #navbar {
     display :flex;
     justify-content: space-between;
-    background-color: var(--color-pink);
+    /* background-color: var(--color-pink); */
+    background-color: transparent;
+    position : fixed;
     align-items : cneter;
     color : var(--color-white);
     padding : 16px;
+    width:100%;
+    transition: all var(--animation-duration) ease-in-out;
 }
 
+#navbar.navbar--dark {
+    background-color: var(--color-pink);
+    padding : 8px;
+}
 .navbar__menu {
     display : flex;
 
