--- a/style.css
+++ b/style.css
@@ -284,11 +284,11 @@ p {
     padding:8px 48px;
 }
 .category__btn.active,
-.category__btn.hover {
+.category__btn:hover {
     background-color: var(--color-pink);
     color:var(--color-white);
 }
-.category__btn.active .category__count,
+.category__btn:active .category__count,
 .category__btn:hover .category__count {
     opacity: 1;
     top:0;
@@ -311,16 +311,61 @@ p {
     display :flex;
     flex-wrap : wrap;
     justify-content: center;
+    opacity: 1;
+    transition : all var(--animation-duration) ease-out;
+}
+.work__projects.anim-out {
+    opacity: 0;
+    transform : scale(0.96) translate(40px);
 }
 .project {
-    width:200px;
-    height:250px;
+    position:relative;
+    display:flex;
+    justify-content: center;
+    align-items : center;
+    width:300px;
+    height:300px;
     margin:2px;
-    background-color: gainsboro;
+    background-color: var(--color-light-white);
+}
+.project:hover .project__description{
+    opacity: 0.8;
+    transition: translateY(0px);
+}
+.project.invisible {
+    display:none;
 }
 .project__img {
     max-width:100%;
-    max-height:70%;
+    max-height:100%;
+}
+.project__description {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;;
+    position : absolute;
+    top : 0;
+    left:0;
+    background-color: black;
+    width:100%;
+    height:100%;
+    opacity: 0;
+    transition: all var(--animation-duration) ease-in;
+}
+.project__description h3 {
+    color: var(--color-white);
+}
+
+.project__description h3:after {
+    content : '';
+    width:25px;
+    height:2px;
+    background-color:var(--color-dark-white);
+    display : block;
+    position:relative;
+    left:50%;
+    margin-left:-12px;
+    margin-top :8px;
 }
 /* testimonials */
 #testimonials {
