--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ p {
     width:100%;
     transition: all var(--animation-duration) ease-in-out;
     z-index:999;
+    height:100px;
 }
 
 #navbar.navbar--dark {
@@ -122,14 +123,17 @@ p {
 .navbar__menu__item {
     padding: 8px 12px;
     margin : 0 4px;
+    color:var(--color-white);
     cursor : pointer;
+    border:1pox sold transparent;
     border-radius: var(--size-border-radius);
 }
-.navbar__menu__item.active {
+/* .navbar__menu__item.active {
     border:1px solid var(--color-white);    
-}
+} */
 .navbar__menu__item:hover {
     background-color: var(--color-dark-pink);
+    border:1px solid white;
 }
 .navbar__toggle-btn {
     position: absolute;
@@ -167,6 +171,7 @@ p {
     border-radius: 4px;
     color :var(--color-white);
 }
+
 /* Section common */
 .section {
     padding:50px;
@@ -283,12 +288,12 @@ p {
     font-size:var(--font-regular);
     padding:8px 48px;
 }
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
     background-color: var(--color-pink);
     color:var(--color-white);
 }
-.category__btn:active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
     opacity: 1;
     top:0;
