--- a/style.css
+++ b/style.css
@@ -127,6 +127,9 @@ p {
     border:1px sold transparent;
     border-radius: var(--size-border-radius);
 }
+.navbar__menu__item.active {
+    border: 1px solid white;
+}
 .navbar__menu__item:hover {
     background-color: var(--color-dark-pink);
     border-color:var(--color-white);
